--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
+            android:name=".TopicAppActivity"
+            android:exported="false"
+            android:label="@string/title_activity_topic_app"
+            android:theme="@style/Theme.MyComposeApp" />
+        <activity
+            android:name=".AffirmationsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_affirmations"
+            android:theme="@style/Theme.MyComposeApp" />
+        <activity
             android:name=".ArtSpaceActivity"
             android:exported="false"
             android:label="@string/title_activity_art_space"
