create Woof app
This commit introduces the Woof app, a simple application that displays a list of dogs with their names and ages.

Key changes include:

- Added a new WoofActivity and its layout.
- Created a Dog data class.
- Added dog data to Datasource.
- Implemented DogItem composable to display individual dog information.
- Added WoofTopAppBar with a logo and app name.
- Defined custom typography and shapes for the Woof app.
- Updated color schemes and themes.
- Added necessary string resources and drawable assets.
- Set WoofActivity as the launcher activity in the manifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
+            android:name=".WoofActivity"
+            android:exported="true"
+            android:label="@string/title_activity_woof"
+            android:theme="@style/Theme.MyComposeApp">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".TopicAppActivity"
             android:exported="false"
             android:label="@string/title_activity_topic_app"
@@ -42,11 +53,7 @@
             android:exported="true"
             android:label="@string/title_activity_dice_roller"
             android:theme="@style/Theme.MyComposeApp">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ComposeArticleActivity"
