--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
+            android:name=".superheros.SuperHeroAppActivity"
+            android:exported="false"
+            android:label="@string/title_activity_super_hero_app"
+            android:theme="@style/Theme.MyComposeApp" />
+        <activity
             android:name=".WoofActivity"
             android:exported="true"
             android:label="@string/title_activity_woof"
@@ -52,9 +57,7 @@
             android:name=".DiceRollerActivity"
             android:exported="true"
             android:label="@string/title_activity_dice_roller"
-            android:theme="@style/Theme.MyComposeApp">
-
-        </activity>
+            android:theme="@style/Theme.MyComposeApp"></activity>
         <activity
             android:name=".ComposeArticleActivity"
             android:exported="false"
