Updated super hero ui
This commit introduces animation to the superhero list items.
- Items now slide in vertically with a staggered effect.
- The top app bar color has been adjusted.
- Minor layout adjustments were made to the hero item card.
- The `SuperHeroAppActivity` is now the default launch activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,21 @@
         tools:targetApi="31">
         <activity
             android:name=".superheros.SuperHeroAppActivity"
-            android:exported="false"
-            android:label="@string/title_activity_super_hero_app"
-            android:theme="@style/Theme.MyComposeApp" />
-        <activity
-            android:name=".WoofActivity"
             android:exported="true"
-            android:label="@string/title_activity_woof"
+            android:label="@string/title_activity_super_hero_app"
             android:theme="@style/Theme.MyComposeApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".WoofActivity"
+            android:exported="true"
+            android:label="@string/title_activity_woof"
+            android:theme="@style/Theme.MyComposeApp">
+
         </activity>
         <activity
             android:name=".TopicAppActivity"
