--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
+            android:name=".dessertclicker.DessertClickerActivity"
+            android:exported="true"
+            android:label="@string/title_activity_dessert_clicker"
+            android:theme="@style/Theme.MyComposeApp">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".wellnessday.WellnessDayActivity"
             android:exported="false"
             android:label="@string/title_activity_wellness_day"
@@ -32,7 +43,7 @@
             android:name=".WoofActivity"
             android:exported="true"
             android:label="@string/title_activity_woof"
-            android:theme="@style/Theme.MyComposeApp"></activity>
+            android:theme="@style/Theme.MyComposeApp" />
         <activity
             android:name=".TopicAppActivity"
             android:exported="false"
