Initialized Unscramble App UI
This commit introduces the basic UI for the Unscramble app.

Key changes include:
- Added `UnscrambleActivity` and set it as the launcher activity.
- Created `GameScreen.kt` with initial UI elements:
    - App title
    - Game layout card (placeholder content)
    - Submit and Skip buttons
    - Game status display (placeholder content)
    - `FinalScoreDialog` (placeholder)
- Added `Datasource.kt` with a list of words for the game.
- Implemented `UnscrambleTheme` including color schemes, shapes, and typography.
- Updated string resources with Unscramble app specific text.
- Added lifecycle logging to `DessertClickerActivity`.
- Implemented share functionality in `DessertClickerActivity`.
- Updated `DessertClickerAppBar` to include a share button.
- Refactored dessert selection logic in `DessertClickerApp`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,26 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
-            android:name=".dessertclicker.DessertClickerActivity"
+            android:name=".unscramble.UnscrambleActivity"
             android:exported="true"
-            android:label="@string/title_activity_dessert_clicker"
+            android:label="@string/title_activity_unscramble"
             android:theme="@style/Theme.MyComposeApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".dessertclicker.DessertClickerActivity"
+            android:exported="true"
+            android:label="@string/title_activity_dessert_clicker"
+            android:theme="@style/Theme.MyComposeApp">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".wellnessday.WellnessDayActivity"
@@ -33,11 +44,11 @@
             android:exported="true"
             android:label="@string/title_activity_super_hero_app"
             android:theme="@style/Theme.MyComposeApp">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".WoofActivity"
