--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_cupcake"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_cupcake_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
-            android:name=".unscramble.UnscrambleActivity"
+            android:name="com.zayar.cupcake.CupcakeActivity"
             android:exported="true"
-            android:label="@string/title_activity_unscramble"
+            android:label="@string/app_name_cupcake"
             android:theme="@style/Theme.MyComposeApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,15 +24,26 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".unscramble.UnscrambleActivity"
+            android:exported="false"
+            android:label="@string/title_activity_unscramble"
+            android:theme="@style/Theme.MyComposeApp">
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
+        </activity>
+        <activity
             android:name=".dessertclicker.DessertClickerActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_dessert_clicker"
             android:theme="@style/Theme.MyComposeApp">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".wellnessday.WellnessDayActivity"
@@ -44,11 +55,11 @@
             android:exported="true"
             android:label="@string/title_activity_super_hero_app"
             android:theme="@style/Theme.MyComposeApp">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".WoofActivity"
