--- a/cupcake/src/main/AndroidManifest.xml
+++ b/cupcake/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity
-            android:name=".CupcakeActivity"
-            android:exported="false"
-            android:label="@string/title_activity_cupcake"
-            android:theme="@style/Theme.MyComposeApp" />
+<!--        <activity-->
+<!--            android:name=".CupcakeActivity"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_cupcake"-->
+<!--            android:theme="@style/Theme.MyComposeApp" />-->
     </application>
 
 </manifest>
