feat: Add Reply and LunchTray app modules
This commit introduces two new modules:

- **Reply**: A Material Design focused email app.
- **LunchTray**: An app for ordering lunch items.

The LunchTray app's UI has been completed, including:
- Screen navigation
- Top app bar implementation
- All menu screens (Entree, Side Dish, Accompaniment)
- Checkout screen
- OrderViewModel for managing order state

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,26 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
-            android:name="com.zayar.cupcake.CupcakeActivity"
+            android:name="com.zayar.lunchtray.LunchTrayActivity"
             android:exported="true"
-            android:label="@string/app_name_cupcake"
+            android:label="@string/app_name_lunch_tray"
             android:theme="@style/Theme.MyComposeApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.zayar.cupcake.CupcakeActivity"
+            android:exported="false"
+            android:label="@string/app_name_cupcake"
+            android:theme="@style/Theme.MyComposeApp">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".unscramble.UnscrambleActivity"
