--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:theme="@style/Theme.MyComposeApp"
         tools:targetApi="31">
         <activity
-            android:name="com.zayar.lunchtray.LunchTrayActivity"
+            android:name="com.zayar.reply.ReplyActivity"
             android:exported="true"
-            android:label="@string/app_name_lunch_tray"
-            android:theme="@style/Theme.MyComposeApp">
+            android:icon="@mipmap/ic_launcher_reply"
+            android:label="@string/app_name_reply"
+            android:roundIcon="@mipmap/ic_launcher_reply_round">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,15 +25,26 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.zayar.lunchtray.LunchTrayActivity"
+            android:exported="false"
+            android:label="@string/app_name_lunch_tray"
+            android:theme="@style/Theme.MyComposeApp">
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
+        </activity>
+        <activity
             android:name="com.zayar.cupcake.CupcakeActivity"
             android:exported="false"
             android:label="@string/app_name_cupcake"
             android:theme="@style/Theme.MyComposeApp">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".unscramble.UnscrambleActivity"
